2017-04-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/Makefile.am (INSTALLPERMS_exec): Add ambind, remove
	  amservice
	* server-src/Makefile.am (INSTALLPERMS_exec): Remove amcheck, dumper
	  and planner

2017-04-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS: S3 device: openstack keystone v3 support
	* device-src/s3-device.c: PROJECT-NAME and DOMAIN-NAME device
	  properties
	* device-src/s3-device.h (struct _S3Device): Add project_name and
	  domain_name fields
	* device-src/s3.c: Get token from keystone v3
	* device-src/s3.h (s3_open): Change prototype.
	* man/xml-source/amanda-devices.7.xml: Document new device properties

2017-04-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c: Remove debugging statement

2017-04-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c: New generic json parser
	* common-src/amjson.h: Add json parser prototypes
	* common-src/Makefile.am (libamanda_la_SOURCES): Add amjson.c
	* common-src/Makefile.am (noinst_HEADERS): Add amjson.h
	* device-src/s3.c (get_openstack_swift_api_v2_setting):Send json
	  requestand parse json result

2017-04-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* perl/Amanda/Interactivity/email.pm: Improve Interactivity

2017-04-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* perl/Amanda/Interactivity/tty_email.pm: Fix NAME description

2017-04-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* man/xml-source/amadmin.8.xml: Add config command
	* man/xml-source/amanda.conf.5.xml (seealso): Add ref to amadmin
	* man/xml-source/amgetconf.8.xml (seealso): Add ref to amadmin

2017-03-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/ndmp-device.c (write_from_connection_impl,
	  read_to_connection_impl): Do not overflow length

2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>